--- a/FormADrive.resx
+++ b/FormADrive.resx
@@ -120,16 +120,6 @@
   <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>14, 15</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnPositionAlign.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAAK9JREFUOE+tjwEOxSAIQ3eXf/8zOlC6IBYx229SYcLeuqu1trVID2n5PNqOnxS9
-        WSuAu51ezGhSuYQ7zUB8jakCHicEKDrRDMwSnsDKhPFFBiNwcAbQJ2QArzhfEmKBOYrtwDoeK2QIR7Ed
-        WMd9ZRx//GVrHkUY+0B8FoEzgD6hF2AMCpUJoQiDE83ALKGqAAnlMCFUAU0zEAlZBXC304v5aTK7hMuM
-        mV5+Mb1873bdEUmPgcoSZjgAAAAASUVORK5CYII=
-</value>
-  </data>
   <metadata name="ilLinkDirection.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>205, 18</value>
   </metadata>
@@ -137,9 +127,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAO
-        CAAAAk1TRnQBSQFMAgEBAwEAASgBAQEoAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAI
+        CQAAAk1TRnQBSQFMAgEBBQEAAVABAQFQAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -166,15 +156,32 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/8wAAfoIAAH8BgAB/AgA
-        AfomAAL6BgAC/AYAAvwGAAL6HgAL+gQADPwEAAv6FgAM+gIADvwCAAz6FgAN+hD8DfoWAAz6AgAO/AIA
-        DPoWAAv6BAAM/AQAC/oeAAL6BgAC/AYAAvwGAAL6JgAB+ggAAfwGAAH8CAAB+v8AHAABQgFNAT4HAAE+
-        AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEABv8CAAH/Ad8B+wHfAfsB/wIAAf8BzwHzAc8B8wH/
-        AgAB/wHHAeMBxwHjAf8CAAHAAQMBwAEDAcABAwIAAcABAQGAAQEBgAEDAgABwAQAAQMCAAHABAABAwIA
-        AcAEAAEDAgABwAEBAYABAQGAAQMCAAHAAQMBwAEDAcABAwIAAf8BxwHjAccB4wH/AgAB/wHPAfMBzwHz
-        Af8CAAH/Ad8B+wHfAfsB/wIABv8CAAb/AgAL
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0kAAqY+AAOmPgADpj4A
+        A6Y+AAKmPwACpj4AAqY0AAamBAACpjQABaYFAAKmNAAEpgYAAqY0AAWmBAADpjQAAqYBAAimNQABpgMA
+        Bqb6AAKmPQADpjwAA6YUAAH6CAAB/AYAAfwIAAH6DgADphUAAvoGAAL8BgAC/AYAAvoOAAKmDgAL+gQA
+        DPwEAAv6BQACpg8ADPoCAA78AgAM+gUAAqYPAA36EPwN+gUAAqYEAAamBQAM+gIADvwCAAz6BQACpgUA
+        BaYFAAv6BAAM/AQAC/oFAAKmBgAEpg0AAvoGAAL8BgAC/AYAAvoNAAOmBAAFpg0AAfoIAAH8BgAB/AgA
+        AfoOAAimAQACpjYABqYDAAGmsgABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/wEA
+        Av8GAAH/AT8GAAH/AR8GAAH/AY8GAAH/AccGAAH/AecGAAH/AfMGAAH/AfMGAAHAAfMGAAHBAfMGAAHD
+        AfMGAAHBAeMGAAHIAQcGAAHcAQ8GAAL/BgAC/wYACP8B/AL/Ad8B+wHfAfsB/wH4Av8BzwHzAc8B8wH/
+        AfEC/wHHAeMBxwHjAf8B4wH/AcABAwHAAQMBwAEDAecB/wHAAQEBgAEBAYABAwHPAf8BwAQAAQMBzwH/
+        AcAEAAEDAc8BAwHABAABAwHPAYMBwAEBAYABAQGAAQMBzwHDAcABAwHAAQMBwAEDAccBgwH/AccB4wHH
+        AeMB/wHgARMB/wHPAfMBzwHzAf8B8AE7Af8B3wH7Ad8B+xH/Cw==
 </value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnPositionAlign.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAK9JREFUOE+tjwEOxSAIQ3eXf/8zOlC6IBYx229SYcLeuqu1trVID2n5PNqOnxS9
+        WSuAu51ezGhSuYQ7zUB8jakCHicEKDrRDMwSnsDKhPFFBiNwcAbQJ2QArzhfEmKBOYrtwDoeK2QIR7Ed
+        WMd9ZRx//GVrHkUY+0B8FoEzgD6hF2AMCpUJoQiDE83ALKGqAAnlMCFUAU0zEAlZBXC304v5aTK7hMuM
+        mV5+Mb1873bdEUmPgcoSZjgAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>14, 15</value>
+  </metadata>
   <metadata name="dlgOpen.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>105, 18</value>
   </metadata>
