--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -304,12 +304,6 @@
   <data name="directionBoth" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\directionBoth.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="directionLeft" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\directionLeft.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="directionRight" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\directionRight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="alignRotation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\alignRotation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -318,5 +312,17 @@
   </data>
   <data name="excangeUpDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\excangeUpDown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="directionIn" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\directionIn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="directionInBack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\directionInBack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="directionOut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\directionOut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="directionOutBack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\directionOutBack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
